--- a/client/css/parcials/_typo.scss
+++ b/client/css/parcials/_typo.scss
@@ -97,20 +97,26 @@ button.filter_btn {
 .movie_card_info {
 	font-family: 'Roboto', sans-serif;
 	color: $bg-light-bege;
-	text-transform: capitalize;
 	line-height: 200%;
 
 	h2{
 		@include fontSize(2);
 		margin-bottom: 30px;
+		text-transform: capitalize;
 	}
 
 	h3{
 		@include fontSize(1);
+		text-transform: capitalize;
+	}
+
+	h4{
+		@include fontSize(0.7);
 	}
 
 	p{
 		@include fontSize(0.8);
+		text-transform: capitalize;
 	}
 }
 
@@ -156,4 +162,10 @@ button.rate_btn {
 	@include fontSize(1);
 	font-family: 'Roboto', sans-serif;
 	color: $p-color-black;
+	input {
+		text-align: center;
+		overflow-wrap: break-word;
+    	word-wrap: break-word;
+    	word-break: break-word;
+	}
 }
